--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -20,6 +20,7 @@
 
 @import '~angular-tree-component/dist/angular-tree-component.css';
 //@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '~datatables.net-dt/css/jquery.dataTables.css';
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~slick-carousel/slick/slick-theme.css';
 @import '~slick-carousel/slick/slick.css';
