--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -16,4 +16,6 @@
   ~
   -->
 <ngx-loading-bar [color]="'rgb(27, 20, 100)'"></ngx-loading-bar>
-<router-outlet></router-outlet>
+<div [@routeAnimations]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
+</div>
