--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -20,7 +20,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="start start">
         <div fxFlex="100">
             <div class="md-padding">
-                <h1>Welcome to StreamPipes!</h1>
+                <h1>Welcome to Apache StreamPipes!</h1>
                 <hr>
                 <status></status>
                 <div class="home-margin">
