[hotfix] Add default font to global settings

--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -30,7 +30,7 @@ body {
   overflow: auto;
   background: #ffffff;
 
-  font-family: 'Arial', sans-serif !important;
+  font-family: 'Roboto', 'Arial', sans-serif !important;
   height: auto !important;
   width: 100%;
 }
