--- a/ui/src/app/home/components/status.component.html
+++ b/ui/src/app/home/components/status.component.html
@@ -16,20 +16,26 @@
   ~
   -->
 
-<div fxFlex="100">
-    <div fxFlex="33" class="status-container pipelines">
+<div fxFlex="100" fxLayout="row">
+    <div fxFlex="25" class="status-container pipelines mr-20" (click)="navigate('pipelines')">
         <div fxFill="100" fxLayout="column" fxLayoutAlign="center center">
             <div class="status-container-number" fxLayoutAlign="start center">{{pipelines}}</div>
             <div class="status-container-text">pipelines created</div>
         </div>
     </div>
-    <div fxFlex="33" class="status-container pipelines-running">
+    <div fxFlex="25" class="status-container pipelines-running mr-20" (click)="navigate('pipelines')">
         <div fxFill="100" fxLayout="column" fxLayoutAlign="center center">
             <div class="status-container-number" fxLayoutAlign="start center">{{runningPipelines}}</div>
             <div class="status-container-text">pipelines running</div>
         </div>
     </div>
-    <div fxFlex="33" class="status-container pipeline-elements-installed">
+    <div fxFlex="25" class="status-container notifications mr-20" (click)="navigate('notifications')">
+        <div fxFill="100" fxLayout="column" fxLayoutAlign="center center">
+            <div class="status-container-number" fxLayoutAlign="start center">{{NotificationCountService.unreadNotificationCount}}</div>
+            <div class="status-container-text">unread notifications</div>
+        </div>
+    </div>
+    <div fxFlex="25" class="status-container pipeline-elements-installed" (click)="navigate('add')">
         <div fxFill="100" fxLayout="column" fxLayoutAlign="center center">
             <div class="status-container-number" fxLayoutAlign="start center">{{installedPipelineElements}}</div>
             <div class="status-container-text">installed pipeline elements</div>
