--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -57,6 +57,7 @@
 @import './sp/feedback.ng1';
 @import './sp/pipeline-assembly.scss';
 @import './sp/widgets.scss';
+@import './sp/progress-bar.scss';
 
 @import './sp/input.ng1';
 @import './sp/documentation.ng1';
