--- a/ui/src/app/connect/static-properties/static-property.component.html
+++ b/ui/src/app/connect/static-properties/static-property.component.html
@@ -59,12 +59,18 @@
             </app-static-color-picker>
 
             <app-static-runtime-resolvable-any-input *ngIf="isRuntimeResolvableAnyStaticProperty(staticProperty)"
-                                                     (inputEmitter)="valueChange($event)"
-                                                     [staticProperty]="staticProperty"></app-static-runtime-resolvable-any-input>
+                                                     [staticProperty]="staticProperty"
+                                                     [staticProperties]="staticProperties"
+                                                     [eventSchemas]="eventSchemas"
+                                                     [pipelineElement]="pipelineElement"
+                                                     [completedStaticProperty]="completedStaticProperty"
+                                                     [adapterId]="adapterId">
+            </app-static-runtime-resolvable-any-input>
 
             <app-static-runtime-resolvable-oneof-input *ngIf="isRuntimeResolvableOneOfStaticProperty(staticProperty)"
-                                                       (inputEmitter)="valueChange($event)"
                                                        [completedStaticProperty]="completedStaticProperty"
+                                                       [pipelineElement]="pipelineElement"
+                                                       [eventSchemas]="eventSchemas"
                                                        [staticProperty]="staticProperty"
                                                        [staticProperties]="staticProperties"
                                                        [adapterId]="adapterId"></app-static-runtime-resolvable-oneof-input>
