--- a/ui/src/app/connect/data-marketplace/adapter-export/adapter-export-dialog.component.scss
+++ b/ui/src/app/connect/data-marketplace/adapter-export/adapter-export-dialog.component.scss
@@ -16,21 +16,7 @@
  *
  */
 
-.md-toolbar {
-    box-sizing: border-box;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    position: relative;
-    z-index: 2;
-    font-size: 20px;
-    min-height: 64px;
-    width: 100%;
-}
+@import '../../../../scss/sp/sp-dialog.scss';
 
 .code-container {
     position: relative;
