[STREAMPIPES-199] Improve pipeline storage dialog

--- a/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.scss
+++ b/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.scss
@@ -35,3 +35,12 @@
 ::ng-deep .pipeline-radio-group .mat-radio-label {
   padding: 0;
 }
+
+.status-text {
+  font-size: 14pt;
+  margin-top:10px;
+}
+
+.status-subtext {
+  font-size: 12pt;
+}
