--- a/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
+++ b/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
@@ -19,8 +19,7 @@
 <div class="sp-dialog-container">
     <div class="sp-dialog-content padding-20">
         <div fxFlex="100" fxLayout="column">
-
-            <div fxFlex="100" fxLayout="column">
+            <div fxFlex="100" fxLayout="column" *ngIf="!saved && !saving && !storageError">
                 <div id="overwriteCheckbox" class="checkbox" *ngIf="currentModifiedPipelineId">
                     <mat-radio-group [(ngModel)]="updateMode" fxLayout="column" color="primary" class="pipeline-radio-group">
                         <mat-radio-button [value]="'update'" class="mb-10" style="padding-left: 0;">
@@ -44,22 +43,35 @@
                     </mat-form-field>
                 </div>
                 </form>
-                <mat-checkbox (click)="triggerTutorial()" aria-label="Start Pipeline" [(ngModel)]="startPipelineAfterStorage">
+                <mat-checkbox (click)="triggerTutorial()" color="primary" [(ngModel)]="startPipelineAfterStorage">
                     Start pipeline immediately
                 </mat-checkbox>
+            </div>
+            <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="saving">
+                <mat-spinner [mode]="'indeterminate'" [diameter]="50"></mat-spinner>
+                <span class="status-text">Saving pipeline...</span>
+            </div>
+            <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="saved">
+                <mat-icon color="primary" style="font-size:50pt;height:60px;width:60px;">check_circle</mat-icon>
+                <span class="status-text">Pipeline successfully stored.</span>
+            </div>
+            <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="storageError">
+                <mat-icon color="primary" style="font-size:50pt;height:60px;width:60px;">error</mat-icon>
+                <span class="status-text">Your pipeline could not be stored.</span>
+                <span class="status-subtext">{{errorMessage}}</span>
             </div>
         </div>
     </div>
     <mat-divider></mat-divider>
     <div class="sp-dialog-actions">
-        <button [disabled]="!submitPipelineForm.valid" mat-button mat-raised-button color="primary" (click)="savePipelineName(false)" style="margin-right:10px;">
+        <button [disabled]="!submitPipelineForm.valid || saving || saved" mat-button mat-raised-button color="primary" (click)="savePipeline(false)" style="margin-right:10px;">
             Save
         </button>
-        <button [disabled]="!submitPipelineForm.valid" mat-button mat-raised-button color="primary" (click)="savePipelineName(true)" style="margin-right:10px;">
+        <button [disabled]="!submitPipelineForm.valid || saving || saved" mat-button mat-raised-button color="primary" (click)="savePipeline(true)" style="margin-right:10px;">
             Save and go to pipeline view
         </button>
         <button mat-button mat-raised-button class="mat-basic" (click)="hide()">
-            Cancel
+            {{saved ? 'Close' : 'Cancel'}}
         </button>
     </div>
 </div>
