--- a/ui/src/app/connect/static-properties/static-code-input/static-code-input.component.html
+++ b/ui/src/app/connect/static-properties/static-code-input/static-code-input.component.html
@@ -17,7 +17,7 @@
   -->
 
 <div fxFlex="100" fxLayout="column">
-    <div flex="100" layout="row" layout-align="start center">
+    <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
         <button mat-button mat-raised-button color="primary" class="small-button" (click)="resetCode()"
                 style="margin-right:10px;margin-bottom:10px;">Reset code template
         </button>
