[STREAMPIPES-203] Add more options to pipeline element installation view

--- a/ui/src/app/connect/data-marketplace/data-marketplace.component.html
+++ b/ui/src/app/connect/data-marketplace/data-marketplace.component.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div class="fixed-height" fxLayout="row" class="data-marketplace-options">
+    <div fxLayout="row" class="fixed-height data-marketplace-options">
 
         <div class="data-marketplace-options-item" fxLayoutAlign="start center" fxLayout="row">
             <mat-icon>search</mat-icon>
