--- a/ui/src/app/app-asset-monitoring/components/dashboard-overview/dashboard-overview.component.html
+++ b/ui/src/app/app-asset-monitoring/components/dashboard-overview/dashboard-overview.component.html
@@ -42,6 +42,6 @@
         </mat-grid-tile>
     </mat-grid-list>
     <div *ngIf="dashboardConfigs.length == 0">
-        <h4>(no dashboards available, navigate to <i>New Dahboard</i> to create a new asset dashboard)</h4>
+        <h4>(no dashboards available, navigate to <i>New Dashboard</i> to create a new asset dashboard)</h4>
     </div>
 </div>
